--- a/Project_0/style.css
+++ b/Project_0/style.css
@@ -25,6 +25,11 @@
     margin-top: 200px;
     margin-bottom: 10px;
 }
+
+.minilogo {
+    display: inline-block;
+    margin-right: auto;
+}
 .search {
     width: auto;
     text-align: center;
@@ -57,4 +62,49 @@
 .ident {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.appbar {
+    font-size: 20px;
+    margin: 25px 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: dimgray;
+}
+
+.line {
+    border-bottom: 1px solid dimgray;
+    margin-bottom: 25px;
+}
+
+.appstyle {
+    font-size: 16px;
+    margin: 25px 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+}
+
+.content {
+    display: flex;
+    height: 30px;
+    align-items: left;
+    flex-direction: row;
+    gap: 4px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-size: 14px;
+    margin: 25px 35px;
+}
+
+.s_button {
+    height: 30px;
+    float: right;
+    background: #357ae8;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11px;
+    padding-left: 12px;
+    padding-right: 12px;
+    border: 1px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
